--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: #050505;
+    background: #be5959;
     /*배경 색상*/
 
 }
@@ -20,26 +20,22 @@ body
 .cube
 {
     position: relative;
-    width: 300px;
-    height: 300px;
+    width: 200.5px;
+    height: 200.5px;
     transform-style: preserve-3d;
-    animation: animate 4s linear infinite;
+    animation: animate 10s linear infinite;
+    /*큐브 설정*/
 }
 
 @keyframes animate
 {
     0%
     {
-        transform: rotateX(360deg) rotateY(0deg);
-    }
-    50%
-    {
-        transform: rotateX(180deg) rotateY(180deg);
-
+        transform: rotateX(-30deg) rotateY(0deg);
     }
     100%
     {
-        transform: rotateX(0deg) rotateY(360deg);
+        transform: rotateX(-30deg) rotateY(360deg);
 
     }
 
@@ -63,7 +59,7 @@ body
     width: 100%;
     height: 100%;
     background: linear-gradient(#151515,#00ec00);
-    transform:rotateY(calc(90deg * var(--i))) translateZ(150px)
+    transform:rotateY(calc(90deg * var(--i))) translateZ(100px)
 }
 
 .top
@@ -74,7 +70,7 @@ body
     width: 300px;
     height: 300px;
     background: #151515;
-    transform: rotateX(90deg) translateZ(150px);
+    transform: rotateX(90deg) translateZ(100px);
 }
 
 .top::before
@@ -83,10 +79,10 @@ body
     position: absolute;
     top: 0;
     left: 0;
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     background: #0f0;
-    transform: translateZ(-400px);
+    transform: translateZ(-300px);
     filter: blur(20px);
     box-shadow: 0 0 120px rgba(0, 255, 0, 0.2),
     0 0 200px rgba(0, 255, 0, 0.4),
