--- a/style.css
+++ b/style.css
@@ -59,21 +59,20 @@ body
     width: 100%;
     height: 100%;
     background: linear-gradient(#151515,#00ec00);
-    transform:rotateY(calc(90deg * var(--i))) translateZ(100px)
+    transform:rotateY(calc(60deg * var(--i))) translateZ(173px);
 }
 
-.top
+.top div span
 {
     position: absolute;
     top: 0;
     left: 0;
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     background: #151515;
-    transform: rotateX(90deg) translateZ(100px);
+    transform: rotatey(calc(60deg * var(--j))) rotateX(90deg) translateZ(100px) translateY(74px);
 }
-
-.top::before
+.top div span::before
 {
     content: '';
     position: absolute;
@@ -82,7 +81,7 @@ body
     width: 200px;
     height: 200px;
     background: #0f0;
-    transform: translateZ(-300px);
+    transform: translatey(-500px)translatez(-400px);
     filter: blur(20px);
     box-shadow: 0 0 120px rgba(0, 255, 0, 0.2),
     0 0 200px rgba(0, 255, 0, 0.4),
